Fix body overflow under `layout: raw` (#661)
* fix layout=raw width

* add changeset

* update snapshot

--- a/packages/nextra-theme-docs/src/styles.css
+++ b/packages/nextra-theme-docs/src/styles.css
@@ -402,10 +402,6 @@ blockquote:not(:first-child),
 .nextra-body {
   &.full {
     width: 100%;
-    &.expand {
-      width: 100vw;
-      margin: 0 calc(50% - 50vw);
-    }
   }
 }
 article {
